# notebooks

./: practice.py  pyproject.toml
.github/workflows/: deploy.yml
output_dir/: index.html
output_dir/assets/: ConnectedDataExplorerComponent-D9lFMPRi.js  VegaLite-B39IYLRG.js  _baseEach-oN5XrkWr.js  _baseMap-CqbLDIEn.js  _baseUniq-DDw8ar7d.js  _createAggregator-BVFLtYx1.js  any-language-editor-TH1jIJM3.js  architectureDiagram-IEHRJDOE-BjtBvTmw.js  blockDiagram-JOT3LUYC-ae78mJ6S.js  c4Diagram-VJAJSXHY-Bs-s5nvF.js  channel-D6RGBr_B.js  chunk-4BMEZGHF-BqVTa5IE.js  chunk-A2AXSNBT-CkF4GXPK.js  chunk-AEK57VVT-BffzoQeA.js  chunk-D6G4REZN-RfADi8kI.js  chunk-RZ5BOZE2-h8LzCijy.js  chunk-XZIHB7SX-CKAoH3UH.js  circle-play-Cl7bcNL4.js  classDiagram-GIVACNV2-BczEaXQf.js  clone-Dt6aKzcC.js  compile-Cdgxhtek.js  dagre-OKDRZEBW-DUXmiY8Y.js  data-editor-D_DT3la5.js  diagram-SSKATNLV-BdHBugyt.js  diagram-VNBRO52H-DLxTEDLP.js  edit-page-D96y6148.js  erDiagram-Q7BY3M3F-Dy8ho_9l.js  flowDiagram-4HSFHLVR-Cxy3zIhx.js  ganttDiagram-APWFNJXF-DNHIVUJW.js  gitGraphDiagram-7IBYFJ6S-Dp704Hk1.js  graph-l_AMDL3J.js  home-page-LxSdj5YX.js  index-BERg5dZD.js  index-BHkjZdST.js  index-BNd9wK4z.js  index-BTSpvpAz.js  index-BhrKKZDh.js  index-CQhphJ0g.js  index-CUqLjUuF.js  index-CkMNVDep.js  (+42 more)
